src/styles/sparx/_[ash].scss
/* Reset*/
html{ line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:0;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-0.25em}sup{top:-0.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px}[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
.text-center{
 text-align: center;
  
}

body{
    font-family: 'Century Gothic';
    font-weight: normal;
    font-style: normal;
    font-display: swap;  
}

img{max-width: 100%;}

p, a{
 font-family: inherit;
 text-decoration: none;
 color: #000000;
 font-size: 13px;
}

.pad0{
 padding: 0;
}

li{list-style: none;}

.show{display: block !important;}

.hide{display: none;}

/* Header Main */
/*Fixed Nav*/
:root {
    --animate-duration: 1s;
    --animate-delay: 1s;
    --animate-repeat: 1;
  }
  
  .animate__animated {
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-duration: var(--animate-duration);
    animation-duration: var(--animate-duration);
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
  }
  
  
  @-webkit-keyframes fadeInDown {
    from {
      opacity: 0;
      -webkit-transform: translate3d(0, -100%, 0);
      transform: translate3d(0, -100%, 0);
    }
  
    to {
      opacity: 1;
      -webkit-transform: translate3d(0, 0, 0);
      transform: translate3d(0, 0, 0);
    }
  }
  @keyframes fadeInDown {
    from {
      opacity: 0;
      -webkit-transform: translate3d(0, -100%, 0);
      transform: translate3d(0, -100%, 0);
    }
  
    to {
      opacity: 1;
      -webkit-transform: translate3d(0, 0, 0);
      transform: translate3d(0, 0, 0);
    }
  }
  .animate__fadeInDown {
    -webkit-animation-name: fadeInDown;
    animation-name: fadeInDown;
  }
  
  .animate__fadeInDown {
      -webkit-animation-name: fadeInDown;
      animation-name: fadeInDown;
  }
    
    
  .nav-is-fixed section.mb-top-logo, .nav-is-fixed .mb-dt-nav-cont {
      position: fixed;
      left: 0;
      right: 0;    
      background: #fff;
      z-index: 99;
  }
  
  .nav-is-fixed section.mb-top-logo{top: 0;}
  
  .nav-is-fixed nav.mb-dt-nav-cont {
      top: 98px;
      box-shadow: 0px 4px 6px -5px #d8d8d8;
  }
  
  .nav-is-fixed .mb-logo-2{
   display: none;
  }
/* MB Breadcrumbs */
.breadcrumbs {
    font-size: .85em;
    margin: 0 0 2em;
  }
  
  .breadcrumbs ol {
    list-style-type: none;
    margin: 0;
    padding: 0;
  }
  
  .breadcrumbs li {
    display: inline-block;
  }
  
  .breadcrumbs a {
    text-decoration: underline;
  }
  
  .breadcrumbs li:not(:last-child):after {
    content: "›\00a0";
    display: inline-block;
    padding-left: .75ch;
    speak: none;
  }
  
  .breadcrumbs [aria-current="page"] {
    color: inherit;
    font-weight: normal;
    text-decoration: none;
  }
  
  .breadcrumbs [aria-current="page"]:hover,
  .breadcrumbs [aria-current="page"]:focus {
    text-decoration: underline;
  }
  
  nav.breadcrumbs-tree > ol > li {
      display: inline;
      color: #b7b7b7;
  }
  
  nav.breadcrumbs-tree > ol > li > a {
      color: inherit;
      display: inline-block;
      margin: 0 5px 0 5px;
  }
  
  nav.breadcrumbs-tree > ol > li:first-child > a{
   margin-left: 0;
  }
  
  nav.breadcrumbs-tree > ol > li:last-child:after {
      content: none;
  }
  
  nav.breadcrumbs-tree > ol > li:after {
      content: "/";
  }

/* Toolbar */
section.mb-top-tool-bar {
    background: #000000;
    color: #fff;
}

.mb-tool-bar-flex {
    max-width: 1200px;
    min-height: 30px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
}

.tb-right > ul { list-style: none; }

.tb-right > ul > li {
    display: inline-block;
    padding: 0 10px;
}

.mb-tool-bar-flex a { color: #ffffff; font-size: 12px; }

/* Logo and Search */
.mb-tool-logo-flex {
    display: flex;
    justify-content: space-between;
    max-width: 1200px;
    margin: 0 auto;
    padding: 20px 0;
}

.tb-logo-left img {
    max-height: 65px;
}

.tb-logo-mid img {
    max-width: 270px;
}

.mb-search-logo-flex {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.mb-search-logo-flex img {
    max-height: 32px;
}

.tb-logo-left, .tb-logo-last {
    position: relative;
    width: 12%;
    min-width: 144px;
}


/* Navigation Styles */
nav {
	position: relative;
}
nav > ul > li {
	display: inline-block;
  	font-size: 14px;
  	position: relative;
}
nav > ul > li:first-child {padding-left: 0;}
nav > ul > li:last-child {padding-right: 0;}
/* ... */

